improved performance of profiles suggest api; added profiles similar api
